added continue button

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <h1 id="question">Enter question here</h1>
                 <div class="choices" id="choices">Enter choices here</div>
                 <div class="hide" id="feedback">Feedback</div>
+                <button class ="hide" id="continue">Continue</button>
         </div>
     </section>
 
