--- a/index.html
+++ b/index.html
@@ -22,51 +22,62 @@
     <!-- OPENING PAGE -->
     <section id="opening-page">
         <div class="container text-center my-4">
-            <h1>The Coding Quiz Challenge</h1>
-            <br>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta quae, aut, harum porro labore neque veritatis dicta deleniti delectus vel laboriosam aspernatur esse id asperiores? Enim, quos. Architecto, illo provident.</p>
-            <br>
-            <button id="start">Start Quiz!</button>
+            <div class="row justify-content-center"><h1>The Coding Quiz Challenge</h1></div>
+            <div class="row justify-content-center"><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta quae, aut, harum porro labore neque veritatis dicta deleniti delectus vel laboriosam aspernatur esse id asperiores? Enim, quos. Architecto, illo provident.</p></div>
+            <div class="row justify-content-center"><button id="start">Start Quiz!</button></div>
         </div>
     </section>
 
     <!-- QUESTION PAGES -->
     <section class="hide" id="questions-page">
         <div class="container text-center my-4">
-            <h1 id="question">Enter question here</h1>
-                <div class="choices" id="choices">Enter choices here</div>
-                <div class="hide" id="feedback">Feedback</div>
-                <button class ="hide" id="continue">Continue</button>
+            <div class="row justify-content-center"><h1 id="question">Enter question here</h1></div>
+            <div class="row justify-content-center btn-group" id="choices">Enter choices here</div>
+            <div class="row justify-content-center">
+                <div class="col justify-content-center"></div>
+                <div class="col justify-content-center">
+                    <span class="hide" id="feedback">Feedback</span>
+                </div>
+                <div class="col justify-content-center">
+                    <button class ="hide" id="continue">Continue</button>
+                </div>
+            </div>
         </div>
     </section>
 
     <!-- SUBMIT HIGHSCORES PAGE -->
     <section class="hide" id="submit-highscores-page">
         <div class="container text-center my-4">
-            <h1>All done!</h1>
-            <p>Your final score: <span id="finalscore">0</span></p>
-            <form class="form-inline justify-content-center">
-                <div class="form-group mb-2">
-                  <label>Enter initials</label>
-                </div>
-                <div class="form-group mx-sm-3 mb-2">
-                  <input class="form-control" id="inputInitials" placeholder="ABC">
-                </div>
-                <div>
-                <button class="mb-2" id="submit">Submit</button>
-            </form>
+            <div class="row justify-content-center"><h1>All done!</h1></div>
+            <div class="row justify-content-center"><p>Your final score: <span id="finalscore">0</span></p></div>
+            <div class="row justify-content-center">
+                <form class="form-inline justify-content-center">
+                    <div class="form-group mb-2">
+                    <label>Enter initials</label>
+                    </div>
+                    <div class="form-group mx-sm-3 mb-2">
+                    <input class="form-control" id="inputInitials" placeholder="ABC">
+                    </div>
+                    <div>
+                    <button class="mb-2" id="submit">Submit</button>
+                </form>
+            </div>
         </div>
     </section>
 
     <!-- VIEW HIGHSCORES PAGE -->
     <section class="hide" id="view-highscores-page">
         <div class="container text-center my-4">
-            <h1>Highscores</h1>
+            <div class="row justify-content-center"><h1>Highscores</h1></div>
+            <div class="row justify-content-center">
+                <button class="mx-4" id="go-back">Go back</button>
+                <button class="mx-4" id="clear-highscores">Clear highscores</button>
+            </div>
+            <div class="row justify-content-center">
                 <ul>
                     <li>initials will be here</li>
                 </ul>
-            <button class="mx-2" id="go-back">Go back</button>
-            <button class="mx-2" id="clear-highscores">Clear highscores</button>
+            </div>
         </div>
     </section>
 
