added link to view highscores button in the nav bar

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <title>Coding Quiz</title>
 </head>
 <body>
+    <!-- NAV BAR -->
     <header>
         <nav class="navbar navbar-light bg-light">
-            <span class="navbar-brand mb-0 h1" id="highscores">Your Highscores</span>
+            <a class="navbar-brand mb-0" id="highscores" href="#">View Highscores</a>
+            <!-- <span class="navbar-brand mb-0" id="highscores">View Highscores</span> -->
                 <div>
                     <span class="navbar-text" id="timer">
                     Time: 0
@@ -73,11 +75,7 @@
                 <button class="mx-4" id="go-back">Go back</button>
                 <button class="mx-4" id="clear-highscores">Clear highscores</button>
             </div>
-            <div class="row justify-content-center">
-                <ul>
-                    <li>initials will be here</li>
-                </ul>
-            </div>
+            <div class="row justify-content-center" id="initials"></div>
         </div>
     </section>
 
