--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
                 <button class="mx-4" id="go-back">Go back</button>
                 <button class="mx-4" id="clear-highscores">Clear highscores</button>
             </div>
-            <div class="row justify-content-center" id="initials"></div>
+            <div class="row justify-content-center">
+                <ul id="initials"></ul>
+            </div>
         </div>
     </section>
 
