--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css">
     <title>Coding Quiz</title>
@@ -38,6 +39,7 @@
             <div class="row justify-content-center">
                 <div class="col justify-content-center"></div>
                 <div class="col justify-content-center">
+                    <img id="img">
                     <span class="hide" id="feedback">Feedback</span>
                 </div>
                 <div class="col justify-content-center">
