--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section id="opening-page">
         <div class="container text-center my-4">
             <div class="row justify-content-center"><h1>The Coding Quiz Challenge</h1></div>
-            <div class="row justify-content-center"><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta quae, aut, harum porro labore neque veritatis dicta deleniti delectus vel laboriosam aspernatur esse id asperiores? Enim, quos. Architecto, illo provident.</p></div>
+            <div class="row justify-content-center"><p>Are you ready to test your coding skills?</p></div>
             <div class="row justify-content-center"><button id="start">Start Quiz!</button></div>
         </div>
     </section>
@@ -34,7 +34,7 @@
     <!-- QUESTION PAGES -->
     <section class="hide" id="questions-page">
         <div class="container text-center my-4">
-            <div class="row justify-content-center"><h1 id="question">Enter question here</h1></div>
+            <div class="row justify-content-center"><h2 id="question">Enter question here</h2></div>
             <div class="row justify-content-center btn-group" id="choices">Enter choices here</div>
             <div class="row justify-content-center">
                 <div class="col justify-content-center"></div>
